--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,13 @@ a.borders-white-right
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
+.item-1
+{
+    width: 100%;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 
 
