--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,11 @@ a.borders-white-right
     border-radius: 0 !important;
 }
 
+.border-rounded
+{
+    border-radius: 15px !important;
+}
+
 .do-hyeon
 {
     font-family: 'Do Hyeon', sans-serif;
@@ -146,26 +151,92 @@ a.borders-white-right
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.item-1
+.card
 {
-    width: 100%;
-    height: 500px;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #fff;
+    height: 200px;
+    overflow: hidden;
 }
 
+.card-image
+{
+    max-width: 40%;
+    overflow: hidden;
+    padding: 0;
+    align: center;
+    vertical-align: middle;
+    float: left;
+}
 
+.card-image img
+{
+    max-height: 170px;
+    align: center;
+    vertical-align: middle;
+    float: left;
+    padding-right: 20px;
+}
 
+.card-body
+{
+    display: block;
+}
 
+h4.card-title
+{
+    color: #111;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.1;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    display: block;
+    margin-bottom: 10px;
+}
 
+.card-body p
+{
+    color: #999;
+    padding-top: 1em;
+    letter-spacing: 0.5px;
+    line-height: 1.6em;
+}
 
+.card-body .link-btn
+{
+    display: inline-block;
+    margin: 30px 0px 0px 0px;
+    float: right;
+    color: #777;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: .95em;
+}
 
+.gray-bg
+{
+    background-color: #E6E6E6;
+}
 
+.card-vertical
+{
+    box-shadow:2px 2px 20px rgba(0,0,0,0.3);
+    border:none;
+    margin-bottom:30px;
+}
 
+.card-01 .card-body-vertical
+{
+    position:relative;
+    padding:20px;
+}
 
-
-
-
+.card-img-top
+{
+    width: 100%;
+    border-top-left-radius: calc(.25rem - 1px);
+    border-top-right-radius: calc(.25rem - 1px);
+}
 
 /* ==========================================================================
    Helper classes
